# serde_osc

./: .gitignore  Cargo.toml  LICENSE-MIT  Readme.md
examples/: to_from_vec.rs
serde_osc/: Cargo.toml
serde_osc/src/: de.rs  error.rs  lib.rs  maybeskipcomma.rs  oscarg.rs
serde_osc/src/de/: bundle_visitor.rs  error.rs  iter_visitor.rs  mod.rs  msg_visitor.rs  osc_reader.rs  pkt_deserializer.rs  prim_deserializer.rs
serde_osc/src/ser/: error.rs  mod.rs  osc_writer.rs  pkt_serializer.rs  pkt_type_decoder.rs  timetag_ser.rs
serde_osc/tests/: auto_derive.rs  basic.rs  bundle.rs  manual.rs  mod.rs
serde_osc/tests/de/: manual.rs
serde_osc/tests/ser/: auto_derive.rs  mod.rs
serde_osc_macros/: Cargo.toml
serde_osc_macros/src/: lib.rs
serde_osc_macros/tests/: test.rs
src/: error.rs  lib.rs
src/de/: arg_visitor.rs  bundle_visitor.rs  iter_visitor.rs  maybe_skip_comma.rs  mod.rs  msg_visitor.rs  osc_type.rs  pkt_deserializer.rs  prim_deserializer.rs
src/ser/: bundle_serializer.rs  mod.rs  msg_serializer.rs  pkt_serializer.rs  pkt_type_decoder.rs  serializer_defaults.rs  timetag_ser.rs
tests/: mod.rs
tests/de/: auto_derive.rs  bundle.rs  manual.rs  mod.rs
tests/ser/: auto_derive.rs  bundle.rs  mod.rs  tuple.rs
